# music-server-1

./: .gitignore  Cargo.toml  README.md  build.rs  music-server-1.log4rs.yaml  music-server-1.toml
src/: config.rs  error.rs  main.rs
src/cdn/: files.rs  index.rs  mod.rs
src/logging/: fancy_file.rs  mod.rs
src/util/: mod.rs
web/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
web/e2e/src/: app.e2e-spec.ts
web/src/: index.html
web/src/app/: app.component.spec.ts  app.component.ts  app.module.ts  index.service.ts  index.types.ts
web/src/app/navigation/: navigation.component.css  navigation.component.html  navigation.component.styl  navigation.component.ts
web/src/app/player-bar/: player-bar.component.ts
web/src/environments/: environment.serve.ts
