[package]
name = "music-server-1"
version = "0.1.0"
authors = ["Kneelawk <kneelawk@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "^3.3.2"
actix-web-static-files = "^3.0.5"
anyhow = "^1.0.38"
chrono = "^0.4.19"
derive_more = "^0.99.11"
dirs = "^3.0.1"
dotenv = "^0.15.0"
error-chain = "^0.12.4"
ffmpeg4 = "^0.4.0"
ffmpeg4-sys = "4.2.2"
futures = "^0.3.13"
lazy_static = "^1.4.0"
log = "^0.4.14"
path-slash = "^0.1.4"
percent-encoding = "^2.1.0"
rand = "^0.8.2"
regex = "^1.4.3"
serde = "^1.0.119"
serde_json = "^1.0.62"
sha2 = "^0.9.2"
toml = "^0.5.8"
uuid = "^0.8.2"
walkdir = "^2.3.1"

[dependencies.log4rs]
version = "^1.0.0"

[dependencies.tokio]
version = "^1.2.0"
features = ["sync"]

[build-dependencies]
actix-web-static-files = "^3.0.5"
walkdir = "^2.3.1"
